@@ -10,11 +10,12 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
+import plus.maa.backend.common.utils.converter.ArkLevelConverter;
 import plus.maa.backend.controller.response.ArkLevelInfo;
 import plus.maa.backend.repository.GithubRepository;
 import plus.maa.backend.repository.RedisCache;
 import plus.maa.backend.repository.entity.ArkLevel;
-import plus.maa.backend.repository.entity.ArkLevelRepository;
+import plus.maa.backend.repository.ArkLevelRepository;
 import plus.maa.backend.repository.entity.ArkLevelSha;
 import plus.maa.backend.repository.entity.ArknightsTilePos;
 import plus.maa.backend.repository.entity.github.GithubCommit;
@@ -39,15 +40,6 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class ArkLevelService {
-    private final GithubRepository githubRepo;
-    private final RedisCache redisCache;
-    private final ArkLevelRepository arkLevelRepo;
-    private final ObjectMapper mapper = new ObjectMapper();
-    private final OkHttpClient okHttpClient = new OkHttpClient().newBuilder()
-            .connectTimeout(5, TimeUnit.SECONDS)
-            .readTimeout(5, TimeUnit.SECONDS)
-            .connectionPool(new ConnectionPool(10, 5, TimeUnit.MINUTES))
-            .build();
     /**
      * Github api调用token 从 <a href="https://github.com/settings/tokens">tokens</a> 获取
      */
@@ -63,11 +55,21 @@ public class ArkLevelService {
      */
     @Value("${maa-copilot.github.repo.tile.path:resource/Arknights-Tile-Pos}")
     private String tilePosPath;
+    private final GithubRepository githubRepo;
+    private final RedisCache redisCache;
+    private final ArkLevelRepository arkLevelRepo;
+    private final ObjectMapper mapper = new ObjectMapper();
+    private final OkHttpClient okHttpClient = new OkHttpClient().newBuilder()
+            .connectTimeout(5, TimeUnit.SECONDS)
+            .readTimeout(5, TimeUnit.SECONDS)
+            .connectionPool(new ConnectionPool(10, 5, TimeUnit.MINUTES))
+            .build();
 
     public List<ArkLevelInfo> getArkLevelInfos() {
         return arkLevelRepo.findAll()
                 .stream()
-                .map(ArkLevelInfo::new).toList();
+                .map(ArkLevelConverter.INSTANCE::convert)
+                .collect(Collectors.toList());
     }
 
     /**
@@ -100,7 +102,7 @@ public class ArkLevelService {
                 return;
             }
             GithubTree tree = trees.getTree().stream()
-                    .filter(t -> t.getPath().equals(file) && "tree".equals(t.getType()))
+                    .filter(t -> t.getPath().equals(file) && t.getType().equals("tree"))
                     .findFirst()
                     .orElse(null);
             if (tree == null) {
@@ -115,7 +117,7 @@ public class ArkLevelService {
         }
         //根据后缀筛选地图文件列表
         List<GithubTree> levelTrees = trees.getTree().stream()
-                .filter(t -> "blob".equals(t.getType()) && t.getPath().endsWith(".json"))
+                .filter(t -> t.getType().equals("blob") && t.getPath().endsWith(".json"))
                 .collect(Collectors.toList());
         log.info("[LEVEL]已发现{}份地图数据", levelTrees.size());
 
@@ -124,7 +126,7 @@ public class ArkLevelService {
         levelTrees.removeIf(t -> shaList.contains(t.getSha()));
         log.info("[LEVEL]{}份地图数据需要更新", levelTrees.size());
 
-        DownloadTask task = new DownloadTask(levelTrees.size(), t -> {
+        DownloadTask task = new DownloadTask(levelTrees.size(), (t) -> {
             //仅在全部下载任务成功后更新commit缓存
             if (t.isAllSuccess()) {
                 redisCache.setCacheLevelCommit(commit.getSha());
